--- a/DaoExtended/pom.xml
+++ b/DaoExtended/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1104-jdbc41</version>
+        </dependency>
+
     </dependencies>
 
 </project>
