--- a/SpringMvcExtended/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMvcExtended/src/main/webapp/WEB-INF/web.xml
@@ -5,9 +5,22 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
+
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>
+                ru.itis.config.SpringAppConfig
+            </param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
