--- a/SpringMvcMoreExtended/pom.xml
+++ b/SpringMvcMoreExtended/pom.xml
@@ -16,6 +16,12 @@
             <version>4.3.4.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.5.RELEASE</version>
